[package]
name = "dolphin-memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
winapi = { version = "0.3.9", features = [
  "std",
  "winnt",
  "memoryapi",
  "psapi",
  "tlhelp32",
  "impl-default",
] }
process-memory = "0.4.0"
byteorder = "1.4.3"

[lib]
name ="dolphin_memory"
path = "src/lib.rs"
