[package]
name = "dolphin-memory"
version = "0.2.3"
edition = "2021"
authors = ["Madison Barry <madison.barry@hey.com>"]
readme = "README.md"
license = "MIT"
description = "A rust library that makes reading and writing memory of the Dolphin emulator easier."
repository = "https://github.com/TBPixel/dolphin-memory-rs"

[dependencies]
thiserror = "1.0.30"
winapi = { version = "0.3.9", features = [
  "std",
  "winnt",
  "memoryapi",
  "psapi",
  "tlhelp32",
  "impl-default",
] }
process-memory = "0.4.0"
byteorder = "1.4.3"

[lib]
name ="dolphin_memory"
path = "src/lib.rs"
